tests/ui/feature-gates/feature-gate-unsafe-extern-blocks.stderr
error: extern block cannot be declared unsafe
  --> $DIR/feature-gate-unsafe-extern-blocks.rs:1:1
   |
LL | unsafe extern "C" {
   | ^^^^^^

error: aborting due to 1 previous error

